kubernetes/apache/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8082
  selector:
    role: webserver
  type: NodePort
