kubernetes/apache/load_balance_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  selector:
    role: webserver
  ports:
  - name: http
    protocol: TCP
    port: 60000
    targetPort: 80
